# file-server

./: Cargo.toml  LICENSE  README.md
src/: cli_app.rs  main.rs  options.rs
src/options/: app.rs  service.rs
