[package]
name = "file-server"
version = "1.0.0"
description = "Static HTTP file server for web developers."
authors = ["Mindaugas Celkys"]
license-file = "LICENSE"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1"
actix-files = "0.1"
