[package]
name = "file-server"
version = "1.2.0"
description = "Static HTTP file server for web developers."
authors = ["Mindaugas Celkys <mindaugas.celkys@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mcelkys/file-server"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^1.0.9"
actix-files = "^0.1.7"
clap = "^2.33.0"
